# read

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  compose.dev-deploy.yaml  compose.yaml  env.sample  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: codeql.yaml  coverage.yaml  create-release.yaml  dev-image.yaml  django-tests.yaml  prod-image.yaml  sonar.yaml  sync-dev-to-main.yaml  validate-release.yaml
books/: admin.py  apps.py  models.py  processing.py  qr.py  signals.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_narrator_passphrase.py  0003_narrator_registered_via_event.py  0004_alter_recording_audio_file.py  0005_recording_flag_reason_recording_flagged_for_review.py  0006_recording_status.py  0007_qrcode_short_code.py  0008_qrcode_password_default.py  0009_alter_qrcode_password_alter_qrcode_short_code.py
books/tests/: test_admin.py  test_dashboard.py  test_flag.py  test_models.py  test_playback.py  test_preflight.py  test_processing.py  test_profile.py  test_qr.py  test_serve.py  test_signals.py  test_upload.py
config/: settings.py  urls.py
registration/: admin.py  context_processors.py  models.py  urls.py  views.py  wordlist.py
registration/migrations/: 0001_initial.py  0002_alter_invitelink_token.py
registration/tests/: test_admin.py  test_event.py  test_invite.py  test_login.py  test_models.py
static/css/: style.css
templates/: base.html  home.html
templates/books/: dashboard.html  record.html  (+6 more)
tests/: test_healthz.py
(+4 files in other folders)
