[project]
name = "fragforce-read"
version = "0.1.0"
description = "Audio playback service for the VTO Book Reading project"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "django-environ>=0.12",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=5.0",
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
