[project]
name = "fragforce-read"
version = "1.0.0"
description = "Audio playback service for the VTO Book Reading project"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "django-environ>=0.12",
    "whitenoise>=6.12.0",
    "qrcode[pil]>=8.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "django-debug-toolbar>=5.0",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["books/tests", "registration/tests", "tests"]
